<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2024 BlackOrbs (blackorbs@icloud.com)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/black">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:paddingBottom="@dimen/text_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height_large"
            app:srcCompat="@drawable/placeholder"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="?attr/homeAsUpIndicator"
            android:padding="@dimen/standard_5"
            android:background="@drawable/background_trans_round_corner"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:layout_margin="@dimen/text_margin"
            app:layout_constraintTop_toTopOf="@+id/image"
            app:layout_constraintStart_toStartOf="@+id/image"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TitleText"
            tools:text="49 Days Drama"
            android:maxLines="2"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/image"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            tools:text="152 Minutes"
            android:maxLines="1"
            android:drawableStart="@drawable/baseline_access_time_filled_24"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/standard_5"
            android:layout_marginTop="@dimen/standard_5"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            tools:text="7.8/10 (IMDb)"
            android:gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:layout_marginStart="@dimen/corner"
            android:maxLines="1"
            android:drawablePadding="@dimen/standard_5"
            android:drawableStart="@android:drawable/star_on"
            app:layout_constraintStart_toEndOf="@+id/runtime"
            app:layout_constraintTop_toTopOf="@+id/runtime"
            app:layout_constraintBottom_toBottomOf="@+id/runtime"/>

        <View
            android:id="@+id/title_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/black_100"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@+id/runtime"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintEnd_toEndOf="@+id/title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText.Smaller"
            android:text="@string/release_date"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title_divider"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            tools:text="December 19, 2021"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/date_title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText.Smaller"
            android:text="@string/genre"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="@+id/date_title"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            tools:text="Melodrama"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/genre_title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/plot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText.Smaller"
            android:text="@string/plot"
            android:layout_marginTop="@dimen/corner"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/date"/>
        <blackorbs.dev.moviefinder.ui.moviescreen.ExpandableTextView
            android:id="@+id/plot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            tools:text="One fateful day interweaves the two characters' stories as Yi-kyung attempts to kill herself by walking into oncoming traffic. A bystander saves Yi-kyung by pulling her out of harm's way. However, a massive pile-up ensues from her actions. Ji-hyun fails to hit the brakes as she approaches the collision site and crashes into a truck. When she regains consciousness after the accident, she shockingly finds that she could neither make physical contact with the people crowding around her car nor could any of them hear her protests. She also sees her own body being carted into an ambulance. A motorcyclist nearby seems to be the only person who can see her. After Ji-hyun leaves him to follow the paramedics attempting to revive her body in the ambulance, she meets the cyclist again at the hospital."
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/plot_title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/actors_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText.Smaller"
            android:text="@string/starring"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/plot"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            tools:text="Lee Yo-won, Nam Gyu-ri, Jung Il-woo, Jo Hyun-jae, Bae Soo-bin, Seo Ji-hye"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/actors_title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/director_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText.Smaller"
            android:text="@string/directed_by"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/actors"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/director"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            tools:text="Lee Yo-won, Nam Gyu-ri"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/director_title"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="title,runtime,rating,date_title,date,genre_title,genre,plot_title,plot,actors_title,actors,director_title,director"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:background="@drawable/all_round_corner"
            app:indicatorColor="@color/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>